--- a/less/info.less
+++ b/less/info.less
@@ -375,4 +375,8 @@
     h4 {
         padding-bottom: 5px;
     }
+
+    @media (max-width: 686px) {
+        align-items: center;
+    }
 }
